--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@
 .choice-button:hover {
     background-color: #cecece;
 }
+.start-button {
+    margin: 25px 0 0 0
+}
 .continue-button {
+    margin: 7px 5px 5px 5px;
+}
+.quit-button {
     margin: 7px 5px 5px 5px;
 }
