--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,17 @@
     background-color: #cecece;
 }
 .start-button {
-    margin: 25px 0 0 0
+    margin: 0 3px 0 0;
+}
+.back-button {
+    margin: 0 0 0 0;
 }
 .continue-button {
-    margin: 7px 5px 5px 5px;
+    margin: 7px 3px 5px 5px;
 }
 .quit-button {
-    margin: 7px 5px 5px 5px;
+    margin: 7px 0 5px 0;
 }
-.opt-button {
+.option-button {
     
 }
