--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h3 {
 }
 
 /* Classes */
-.content-loading {
+.content_loading {
   display: none;
 }
 .btn-general {
@@ -29,7 +29,7 @@ h3 {
   border: solid 1px #c7c1c1;
   border-radius: 4px;
   width: 120px;
-  height: 22px;
+  height: 24px;
   font-size: 0.75rem;
   text-align: center;
   transition-duration: 0.2s;
